--- a/_posts/Spring_boot/2021-08-31-swagger.md
+++ b/_posts/Spring_boot/2021-08-31-swagger.md
@@ -1,5 +1,5 @@
 ---
-title: mybatis 비교연산자 에러
+title: Spring boot Swagger 사용하기
 tags: Springboot
 ---
 
@@ -70,6 +70,11 @@ public class SwaggerConfig {
 }
 ```
 **SwaggerConfig.java**  
+
+* **주요 옵션**
+    * apis : 대상 패키지 설정
+    * paths : 어떤 식으로 시작하는 api 를 보여줄것인지 지정
+        * any는 그냥 전부다. 만약, member/ 라고 설정하면 member로 시작하는 api 만 볼 수 있게 설정 가능하다.
 
 ### 4. web page 접속
 
