--- a/_posts/node.js/2021-02-19-Node.js Example server.md
+++ b/_posts/node.js/2021-02-19-Node.js Example server.md
@@ -81,7 +81,7 @@ mysql> create table userinfo (Name varchar(255) primary key not null, studentID 
 // charset 변경
 mysql> ALTER TABLE userinfo convert to charset utf8;
 // test data 삽입
-mysql> insert into userinfo values("junho", 19121426, "test1234", "사이버보안", 5, "010-3302-7492", "jewel7492@naver.com", "개발", "재학", 0, "True");
+mysql> insert into userinfo values("junho", 19111111, "test1234", "컴퓨터공학", 5, "010-3333-3333", "jewel7492@gmail.com", "개발", "재학", 0, "True");
 
 // Calendar 테이블 생성
 mysql> create table calendar (Idx int primary key auto_increment, Header varchar(255) not null, StartTime datetime not null, EndTime datetime not null, Place varchar(255) not null, Name varchar(255) not null, Body varchar(255));
