--- a/_posts/node.js/2021-10-16-Node.js request.md
+++ b/_posts/node.js/2021-10-16-Node.js request.md
@@ -33,7 +33,7 @@ request({
 });
 ```
 
-**Parameter가 있다면**  
+### Parameter가 있다면
 ```javascript
 const request = require("request");
  
@@ -107,5 +107,5 @@ request({
 
 ## Reference
 
-> [MySQL 컬럼 자료형 확인 - ZETAWIKI](https://zetawiki.com/wiki/MySQL_%EC%BB%AC%EB%9F%BC_%EC%9E%90%EB%A3%8C%ED%98%95_%ED%99%95%EC%9D%B8)  
-> [Mysql 기본 쿼리 명령어 - 자유코딩](https://fors.tistory.com/195)
+> [Node.js에서 Request.js 사용하기 - Harry The Great](https://medium.com/harrythegreat/node-js%EC%97%90%EC%84%9C-request-js-%EC%82%AC%EC%9A%A9%ED%95%98%EA%B8%B0-28744c52f68d)  
+> [node.js 에서 api요청하기 - mingtorr](https://velog.io/@mingtorr/node.js-%EC%97%90%EC%84%9C-api%EC%9A%94%EC%B2%AD%ED%95%98%EA%B8%B0)
