--- a/_posts/Linux/2021-12-10-nohup.md
+++ b/_posts/Linux/2021-12-10-nohup.md
@@ -37,4 +37,4 @@ $ kill -9 PID
 
 ## Reference
 
-> [[ubuntu]프로그램 백그라운드에서 실행하기 (nohup 명령어)](https://valuefactory.tistory.com/164)  
+> [[ubuntu]프로그램 백그라운드에서 실행하기 (nohup 명령어) - 가치관제작소](https://valuefactory.tistory.com/164)  
