--- a/_posts/MySql/2021-12-10-AI 다음 등록값.md
+++ b/_posts/MySql/2021-12-10-AI 다음 등록값.md
@@ -42,4 +42,4 @@ mysql> SELECT idx FROM testtable ORDER BY idx DESC LIMIT 1;
 
 ## Reference
 
-> [MySQL auto_increment 의 다음 등록값 확인 방법](https://ioerror.tistory.com/entry/MySQL-autoincrement-%EC%9D%98-%EB%8B%A4%EC%9D%8C-%EB%93%B1%EB%A1%9D%EA%B0%92-%ED%99%95%EC%9D%B8-%EB%B0%A9%EB%B2%95)  
+> [MySQL auto_increment 의 다음 등록값 확인 방법 - ioerror](https://ioerror.tistory.com/entry/MySQL-autoincrement-%EC%9D%98-%EB%8B%A4%EC%9D%8C-%EB%93%B1%EB%A1%9D%EA%B0%92-%ED%99%95%EC%9D%B8-%EB%B0%A9%EB%B2%95)  
