--- a/_posts/MySql/2022-04-12-MySql 로그인 오류.md
+++ b/_posts/MySql/2022-04-12-MySql 로그인 오류.md
@@ -1,5 +1,5 @@
 ---
-title: MySQL 로그인 오류 ERROR 1045 (28000)'\:' Access denied for user 'root'@'localhost' (using password'\:' YES) 
+title: MySQL 로그인 오류 ERROR 1045 (28000)&#58; Access denied for user 'root'@'localhost' (using password&#58; YES) 
 tags: MySql
 ---
 
