--- a/_posts/MySql/2022-04-12-MySql 로그인 오류.md
+++ b/_posts/MySql/2022-04-12-MySql 로그인 오류.md
@@ -32,7 +32,8 @@ mysql> flush privileges;
 위의 과정을 수행하면 비밀번호를 재설정 할 수 있다. 만약, 비밀번호를 초기화하는 과정에서  
 
 ```sql
-ERROR 1064 (42000): You have an error in your SQL syntax; check the manual that corresponds to your MySQL server version for the right syntax to use near ’(“1234”) where user = ‘root” at line 1
+ERROR 1064 (42000): You have an error in your SQL syntax; check the manual that corresponds to your MySQL server version for the 
+right syntax to use near ’(“1234”) where user = ‘root” at line 1
 ```
 
 와 같은 에러가 발생한다면 아래의 방법을 사용하자.
@@ -43,7 +44,7 @@ ERROR 1064 (42000): You have an error in your SQL syntax; check the manual that 
 alter user 'root'@'localhost' identified with mysql_native_password by 'new_password';
 ```
 
-명령을 사용하자. mysql은 버전에 따라 옳은 커맨드를 입력해도 구문 오류가 반환될 수 있기 때문이다.  
+mysql은 버전에 따라 옳은 커맨드를 입력해도 구문 오류가 반환될 수 있기 때문에 다른 version 8 이상은 위의 명령을 사용한다.  
 
 ## Reference
 https
