--- a/_posts/MySql/2022-06-30-MySql 문자열 추출.md
+++ b/_posts/MySql/2022-06-30-MySql 문자열 추출.md
@@ -1,5 +1,5 @@
 ---
-title: MySQL Version check
+title: MySQL 문자열 추출
 tags: MySql
 ---
 
@@ -35,6 +35,8 @@ FROM post_list
 ## RIGHT()
 
 **RIGHT() 함수는 오른쪽부터 지정한 수 만큼의 문자를 추출한다.**  
+
+### Syntax
 
 ```sql
 RIGHT(string, number_of_chars)
