--- a/_posts/Spring_boot/2022-08-05-logback.md
+++ b/_posts/Spring_boot/2022-08-05-logback.md
@@ -190,7 +190,7 @@ Logback의 특징 중에 설정 파일을 일정 시간마다 스캔하여 **어
   <maxHistory>30</maxHistory>
 </rollingPolicy>
 ```
-rollingPolicy란 rollover 발생 시 RollingFileAppender의 행동이다.  
+**rollingPolicy란 rollover 발생 시 RollingFileAppender의 행동이다.**  
 
 SizeAndTimeBasedRollingPolicy는 파일의 크기까지 고려한 TimeBasedPolicy를 상속한 RollingPolicy이다. 이 policy는 fileNamePattern에서 %i와 %d가 필수적인 토큰인데 maxFileSize 태그가 각각의 로그파일이 가질 수 있는 최대 크기를 제한하여 활성화 된 로그파일의 크기가 maxFileSize에 다다르면 %i 토큰이 index로 작용하여 다음 로그 파일의 이름을 결정한다.
 
