--- a/_posts/Spring_boot/2022-08-08-Email.md
+++ b/_posts/Spring_boot/2022-08-08-Email.md
@@ -23,7 +23,7 @@ tags: Springboot
 ![그림1](/assets/Spring_boot/mail/1.png)
 
 
-**2. 왼쪽의 보안 탭으로 들어가서 2단계 인증을 활성화한다.**
+**2. 왼쪽의 보안 탭으로 들어가서 2단계 인증을 활성화한다.**  
 **3. 2단계 인증을 받았다면 앱 비밀번호를 클릭한다.**  
 
 ![그림2](/assets/Spring_boot/mail/2.png)
@@ -32,7 +32,7 @@ tags: Springboot
 
 ![그림3](/assets/Spring_boot/mail/3.png)
 
-**5. 발급받은 앱 비밀번호를 사용한다.**
+**5. 발급받은 앱 비밀번호를 사용한다.**  
 (아래 그림의 앱 비밀번호는 포스팅용으로 발급하였으며 현재는 제거되었음.)  
 
 ![그림4](/assets/Spring_boot/mail/4.png)
@@ -41,7 +41,7 @@ tags: Springboot
 
 보통 수신자가 수백명을 넘어가는 대량 발송 이메일은 대량 이메일 발송 서비스나 마케팅 자동화 솔루션을 활용해 발송 및 관리하는 것이 가장 효율적이다. 하지만 이런 전문 솔루션을 활용하기 위해서는 추가 비용이 들기 때문에 비용 절감을 위해 대부분의 소규모 기업들은 웹메일을 통한 대량 이메일 발송을 고려할 수 밖에 없다.  
 
-**지메일의 개인 계정의 경우 일일 전송한도는 하루(24시간)에 500개로 제한되어 있다.**  
+**Gmail의 개인 계정의 경우 일일 전송한도는 하루(24시간)에 500개로 제한되어 있다.**  
 Google에서는 각 이메일 주소를 각기 다른 이메일로 계산하고 있기 때문에 5명의 수신자에게 보낸 하나의 이메일을 5개의 이메일로 계산한다.  
 
 * **1회 전송 한도**: 100개 (메일 당 최대 100명에게 이메일을 전송할 수 있다.)
@@ -54,8 +54,8 @@ Google에서는 각 이메일 주소를 각기 다른 이메일로 계산하고 
 
 **네이버**  
 
-* 시간 한도: 시간당 최대 30회
-* 1회 전송 한도: 100개
+* **시간 한도**: 시간당 최대 30회
+* **1회 전송 한도**: 100개
 
 **다음 / 다음스마트워크**  
 
@@ -143,7 +143,7 @@ mail.smtp.socketFactory.port=465
  
 # admin 구글 계정
 AdminMail.id = 구글 아이디 입력
-AdminMail.password = 이곳에는 발급받은 앱 비밀번호를 입력
+AdminMail.password = 발급받은 앱 비밀번호를 입력
 ```
 
 ## 4. EmailService
@@ -259,16 +259,16 @@ public String emailConfirm(@RequestParam String email) throws Exception {
 
 ## 7. 메일 확인
 
-* query parameter로 인증번호를 받을 이메일 입력.  
-* front에 반환한 인증 코드와 서버 터미널에 찍힌 인증 코드가 같은지 확인.
+* **query parameter로 인증번호를 받을 이메일 입력.**  
+* **front에 반환한 인증 코드와 서버 터미널에 찍힌 인증 코드가 같은지 확인.**
 
 ![그림5](/assets/Spring_boot/mail/5.png)
 
-PC 메일 확인
+**PC 메일 확인**
 
 ![그림6](/assets/Spring_boot/mail/6.png)
 
-모바일 메일 확인
+**모바일 메일 확인**
 
 ![그림7](/assets/Spring_boot/mail/7.jpg)
 
